# tg-ws-proxy-docker

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: cfproxy-domains.txt
docs/: CfProxy.md  README.md.old
packaging/: windows.spec
proxy/: __init__.py  bridge.py  config.py  keepalive.py  pool.py  raw_websocket.py  tg_ws_proxy.py  utils.py
utils/: default_config.py  update_check.py
