[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tg-ws-proxy"
dynamic=["version"]

description = "Telegram Desktop WebSocket Bridge Proxy"
readme = "docs/README.md"
requires-python = ">=3.8"

license = { name = "MIT", file = "LICENSE" }

authors = [
    { name = "Flowseal" }
]

keywords = [
    "telegram",
    "tdesktop",
    "proxy",
    "bypass",
    "websocket",
    "mtproto",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: System :: Networking :: Firewalls",
]

dependencies = [
    "cryptography>=48.0.0",
]

[project.scripts]
tg-ws-proxy = "proxy.tg_ws_proxy:main"

[project.urls]
Source = "https://github.com/Flowseal/tg-ws-proxy"
Issues = "https://github.com/Flowseal/tg-ws-proxy/issues"

[tool.hatch.build.targets.wheel]
packages = ["proxy", "utils"]

[tool.hatch.version]
path = "proxy/__init__.py"

[tool.ruff.lint]
ignore = ["F403", "F405"]